Fix ride-name overflow

--- a/src/styles/cmps/_ticket-info.scss
+++ b/src/styles/cmps/_ticket-info.scss
@@ -10,9 +10,10 @@
   }
 
   .ride-name {
+    max-width: 230px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 2;
   }
 }
